added dark magic text to site

--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
 
     <!--View-->
     <div id="view" class="container-full-width justify-content-center" align="center">
-        <h1 align="center" style="margin-top: 40px;">Contact</h1>
+        <img src="assets/cooltext-contact-darkmagic.png">
         <h3>Feel free to email me at jeff@bucephalusstudios.com</h3>
     </div>
 
