--- a/about.html
+++ b/about.html
@@ -161,12 +161,12 @@
                 <br />
                 <br />
                 The team at Bucephalus Studios consists of a single full-time developer, Jeff Stevens, and a motley crew of
-                freelancers, friends, and family. We're not beholden to publishers or investors, so we're bound to make something absurd,
-                but we hope you'll find it fun!
+                freelancers, friends, and family. We're not beholden to publishers or investors, so we're bound to make something absurd.
+                We hope you'll find it fun, too!
                 <br />
                 <br />
-                We are also a big supporter of free open-source software. Check out our software page to see our programs and code you can
-                download for free!
+                We are also an ardent supporter of free and open-source software. Lots of our code, tools, and libraries are available to download 
+                and use for FREE on the "Software" tab of this website and on our Github.
             </div>
         </div>
         <div style="margin-left : 20px; margin-top: 40px; max-width: 50%;" align="left">
@@ -190,7 +190,7 @@
                 <br />
                 I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
                 mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work
-                you'll find me doing olympic saber fencing, reading fantasy novels, or cooking for family and friends.
+                you'll find me going to the gym, reading fantasy novels, or cooking for family and friends.
                 <br />
                 <br />
                 Favorite stuff:
