--- a/software.html
+++ b/software.html
@@ -148,103 +148,13 @@
             <div style="margin-left : 20px; margin-top: 40px; max-width: 50%;" align="left">
                 <h1 align="center">Software</h1>
                 <p style="margin-top: 20px;">
-                    Here, you can find software that we've created and have released to the public for free under various licenses. 
-                    We hope you can find a use for our software in your own projects!
+                    We support free-open-source software. Here you can download the code and tools we've used to make
+                    our games for completely free; just follow the license provided with each software. This is pretty easy though,
+                    as most licenses are around the lines of "don't sue us" :)
                 </p>
-                <div id="C++Libraries" style="margin-top : 40px;">
-                    <h3 align="center">
-                        <img src="assets/c++ library cooltext.png">
-                    </h3>
-                    <!--
-                    <div class="softwareDiv">
-                        <h4>
-                            stevensTerminal
-                        </h4>
-                        <div>
-                            <span class="consoleOrange">Currently in development</span>
-                            <br/>
-                            An easy-to-use, powerful library for printing text in the terminal window with C++.
-                        </div>
-                    </div>
-                    <div class="softwareDiv">
-                        <h4>
-                            stevensSound
-                        </h4>
-                        <div>
-                            <span class="consoleOrange">Currently in development</span>
-                            <br/>
-                            A simple library that plays sounds and manages sound libraries and playlists. Powered by SDL and SDL Mixer.
-                        </div>
-                    </div>
-                    -->
-                    <div class="softwareDiv">
-                        <div id="repo-info-stevensStringLib">Loading repository info...</div>
-                        <script>
-                        fetch('https://api.github.com/repos/Bucephalus-Studios/stevensStringLib')
-                        .then(response => response.json())
-                        .then(repo => {
-                            const license = repo.license && repo.license.spdx_id && repo.license.spdx_id !== "NOASSERTION"
-                                ? `<a href="${repo.html_url}/blob/${repo.default_branch}/LICENSE" target="_blank">${repo.license.spdx_id}</a>`
-                                : 'N/A';
-                            document.getElementById('repo-info-stevensStringLib').innerHTML = `
-                            <h3><a href="${repo.html_url}" target="_blank">${repo.name}</a></h3>
-                            <p>${repo.description}</p>
-                            <p>⭐ ${repo.stargazers_count} | 🍴 ${repo.forks_count}</p>
-                            <p>📄 License: ${license}</p>
-                            `;
-                        })
-                        .catch(() => {
-                            document.getElementById('repo-info-stevensStringLib').innerHTML = `
-                            <p>Could not load repository info. <a href="https://github.com/Bucephalus-Studios/stevensStringLib" target="_blank">View on GitHub</a></p>
-                            `;
-                        });
-                        </script>
-                    </div>
-                    <div class="softwareDiv">
-                        <div id="repo-info-stevensVectorLib">Loading repository info...</div>
-                        <script>
-                        fetch('https://api.github.com/repos/Bucephalus-Studios/stevensVectorLib')
-                        .then(response => response.json())
-                        .then(repo => {
-                            const license = repo.license && repo.license.spdx_id && repo.license.spdx_id !== "NOASSERTION"
-                                ? `<a href="${repo.html_url}/blob/${repo.default_branch}/LICENSE" target="_blank">${repo.license.spdx_id}</a>`
-                                : 'N/A';
-                            document.getElementById('repo-info-stevensVectorLib').innerHTML = `
-                            <h3><a href="${repo.html_url}" target="_blank">${repo.name}</a></h3>
-                            <p>${repo.description}</p>
-                            <p>⭐ ${repo.stargazers_count} | 🍴 ${repo.forks_count}</p>
-                            <p>📄 License: ${license}</p>
-                            `;
-                        })
-                        .catch(() => {
-                            document.getElementById('repo-info-stevensVectorLib').innerHTML = `
-                            <p>Could not load repository info. <a href="https://github.com/Bucephalus-Studios/stevensVectorLib" target="_blank">View on GitHub</a></p>
-                            `;
-                        });
-                        </script>
-                    </div>
-                    <div class="softwareDiv">
-                        <div id="repo-info-stevensMapLib">Loading repository info...</div>
-                        <script>
-                        fetch('https://api.github.com/repos/Bucephalus-Studios/stevensMapLib')
-                        .then(response => response.json())
-                        .then(repo => {
-                            const license = repo.license && repo.license.spdx_id && repo.license.spdx_id !== "NOASSERTION"
-                                ? `<a href="${repo.html_url}/blob/${repo.default_branch}/LICENSE" target="_blank">${repo.license.spdx_id}</a>`
-                                : 'N/A';
-                            document.getElementById('repo-info-stevensMapLib').innerHTML = `
-                            <h3><a href="${repo.html_url}" target="_blank">${repo.name}</a></h3>
-                            <p>${repo.description}</p>
-                            <p>⭐ ${repo.stargazers_count} | 🍴 ${repo.forks_count}</p>
-                            <p>📄 License: ${license}</p>
-                            `;
-                        })
-                        .catch(() => {
-                            document.getElementById('repo-info-stevensMapLib').innerHTML = `
-                            <p>Could not load repository info. <a href="https://github.com/Bucephalus-Studios/stevensMapLib" target="_blank">View on GitHub</a></p>
-                            `;
-                        });
-                        </script>
+                <div id="github-repositories" style="margin-top: 40px;">
+                    <div id="github-repos-container">
+                        <!-- Repository cards will be dynamically loaded here -->
                     </div>
                 </div>
             </div>
@@ -260,6 +170,7 @@
         <!-- Add javascript before the end of the body -->
         <!-- <script type="text/javascript" src="js/headerLoader.js"></script>
         <script type="text/javascript" src="js/footerLoader.js"></script> -->
+        <script type="text/javascript" src="js/github-repos.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
