edit to software page header

--- a/software.html
+++ b/software.html
@@ -149,9 +149,10 @@
                 <h1 align="center">Software</h1>
                 <p style="margin-top: 20px;">
                     We support free-open-source software. Here you can download the code and tools we've used to make
-                    our games for completely free; just follow the license provided with each software. This is pretty easy though,
-                    as most licenses are around the lines of "don't sue us" :)
-                </p>
+                    our games completely for FREE. Please just follow the license associated with each software. That should
+                    be pretty easy though, as most of them are akin to "do what you want with this, just don't sue us".
+                    <br/>
+                    If you want to say thanks, dropping us a message, crediting us in your projects, or tipping us on Kofi are all appreciated :)
                 <div id="github-repositories" style="margin-top: 40px;">
                     <div id="github-repos-container">
                         <!-- Repository cards will be dynamically loaded here -->
