--- a/about.html
+++ b/about.html
@@ -155,18 +155,17 @@
             </div>
             <div>
                 <br />
-                Bucephalus Studios LLC is a software company founded in 2021 by Jeff Stevens. We are dedicated
-                toward making original games that are not plagued by problems like corporatized design,
-                predatory monetization, or pushing political agendas. Games are about fun; let's keep them that way!
+                Bucephalus Studios LLC is a software company founded in 2021 by Jeff Stevens. We are dedicated to creating original games
+                free from predatory monetization, AI-generated content, and anything that gets in the way of immersive gameplay. Games are about fun; let's keep them that way!
                 <br />
                 <br />
                 The team at Bucephalus Studios consists of a single full-time developer, Jeff Stevens, and a motley crew of
-                freelancers, friends, and family. We're not beholden to publishers or investors, so we're bound to make something absurd.
-                We hope you'll find it fun, too!
+                freelancers, friends, and family. We're not beholden to publishers or investors, so we're bound to make something
+                absurd and true to ourselves.
                 <br />
                 <br />
                 We are also an ardent supporter of free and open-source software. Lots of our code, tools, and libraries are available to download 
-                and use for FREE on the "Software" tab of this website and on our Github.
+                and use for free on the "Software" tab of this website and on our Github.
             </div>
         </div>
         <div style="margin-left : 20px; margin-top: 40px; max-width: 50%;" align="left">
@@ -184,20 +183,21 @@
                 <img src="assets/weejeff.jpg" width="50%" height="50%" style="border-radius : 10px; margin-bottom : 10px;">
                 <br />
                 I'm in my 20s now, and these memories of meeting up with my lunchtable friends in MMORPGs, braving the wild-west
-                of early internet forums and image boards, and playing every flash game I could find on Newgrounds made me the game
+                of early internet forums and image boards, and playing every flash game I could find on Newgrounds and Kongregate made me the game
                 developer I am today. 
                 <br />
                 <br />
                 I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
                 mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work
-                you'll find me going to the gym, reading fantasy novels, or cooking for family and friends.
+                you'll find me reading fantasy novels, going to the gym, and cooking concerning amounts of spaghetti for my
+                family and friends.
                 <br />
                 <br />
                 Favorite stuff:
                 <ul>
                     <li>Game: Planescape Torment</li>
-                    <li>Movie: Whiplash</li>
-                    <li>Music: Ghost Love Score by Nightwish</li>
+                    <li>Movie: Hereditary</li>
+                    <li>Music: Ghost Love Score</li>
                     <li>Book: Tress of The Emerald Sea</li>
                     <li>Programming Language: C++</li>
                 </ul>
