brief change to about

--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
             <div>
                 <br />
                 Bucephalus Studios LLC is a software company founded in 2021 by Jeff Stevens. We are dedicated to creating original games
-                free from predatory monetization, AI-generated content, and anything that gets in the way of immersive gameplay. Games are about fun; let's keep them that way!
+                free from predatory monetization, AI slop content, and heavy-handed messaging. Games are about fun; let's keep them that way!
                 <br />
                 <br />
                 The team at Bucephalus Studios consists of a single full-time developer, Jeff Stevens, and a motley crew of
