--- a/games.html
+++ b/games.html
@@ -165,6 +165,10 @@
                         <a href="https://bucephalus.itch.io/cultgame" target="_blank">
                             <img src="assets/itchio-available-badge.svg" width="100%" height="100%" id="itchBadge" style="max-width : 250px; margin-top : 10px;">
                         </a>
+                        <br />
+                        <a href="cultgame-press-kit.html" class="btn btn-secondary" style="margin-top : 10px;">
+                            Press Kit
+                        </a>
                     </div>
                 </div>
             </div>
