--- a/games.html
+++ b/games.html
@@ -166,9 +166,9 @@
                             <img src="assets/itchio-available-badge.svg" width="100%" height="100%" id="itchBadge" style="max-width : 250px; margin-top : 10px;">
                         </a>
                         <br />
-                        <a href="cultgame-press-kit.html" class="btn btn-secondary" style="margin-top : 10px;">
+                        <!-- <a href="cultgame-press-kit.html" class="btn btn-secondary" style="margin-top : 10px;">
                             Press Kit
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
